--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p id="computerChoice"></p>
         </div>
       </div>
-      <div id="result"></div>
+      <div id="result"><h3>Result</h3></div>
   </div>
 
   <!-- Link JQuery here -->
